# claimy.io-main

./: .env.example  .gitignore  Anchor.toml  README.md  angular.json  body.json  env.template  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml
DEVELOPERWORK/: CLAIMY_VAULT.md  EDGE_FUNCTIONS.md  ONCHAIN_VAULT.md  PLAYABLE_CREDITS.md  README.md  SIMPLE_VAULT_WITHDRAW.md  SUPABASE_SETUP.md  TESTING_DEPOSITS.md  supabase-schema.sql  supabase-verify.sql
DEVELOPERWORK/migrations/: claimy_admin_sweep_logs.sql  claimy_bankroll_stake_cap.sql  claimy_playhouse_feed.sql  claimy_playhouse_include_dice.sql  claimy_playhouse_player_ranking_stats.sql  claimy_referrals.sql
demo/: README.md  demo.css  demo.js  index.html
docs/: CLAIMY_VAULT.md  EDGE_FUNCTIONS.md  FRONTEND_AND_ENV.md  ONCHAIN_VAULT.md  PLAYABLE_CREDITS.md  README.md  SUPABASE_SETUP.md  TESTING_DEPOSITS.md  supabase-schema.sql  supabase-verify.sql
docs/migrations/: claimy_clear_playhouse_sessions_manual.sql  claimy_deposit_chain_snapshot.sql  claimy_games_client_seed.sql  claimy_playable_credits.sql  claimy_playhouse_feed.sql  claimy_playhouse_include_blackjack.sql  claimy_sync_from_chain_atomic.sql  claimy_withdraw_cooldown.sql
programs/claimy-vault/: Cargo.toml  README.md
programs/claimy-vault/src/: lib.rs
scripts/: check-deposit-balance.cjs  derive-claimy-vault-pdas.cjs  generate-orange-favicon.cjs  inject-env-prod.cjs  start-dev.cmd  sync-env.cjs  sync-env.cmd
src/: index.html  styles.scss
src/app/: app-routing.module.ts  app.component.ts  app.module.ts
supabase/: config.toml
(+131 files in other folders)
