[package]
name = "claimy-vault"
version = "0.1.0"
description = "Claimy SPL vault (PDA) — relayer-signed withdrawals to user ATAs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "claimy_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
